# onnx2tf

./: .dockerignore  .gitignore  AUTO_JSON_FEATURE_SUMMARY.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FLATBUFFER_DIRECT_MIGRATION_GUIDE.md  README.md  SECURITY.md  benchmark_saved_model.py  benchmark_tflite.py  demo.yml  lowmem_test_infer.py  pyproject.toml  replace.json  replace_slice.json  setup.py  test_agj_basic.py  test_agj_cotof.py  test_agj_option.py  test_agj_simple.py  test_auto_gen_simple.py  test_auto_json.py  test_both_expand.json  test_critical_fix.json  test_dimension_check.py  test_expand_fix.py  test_iterative_json.py  test_iterative_optimizer.py  test_json_gen.py  test_minimal_gen.py  update-builder.md  update-builder2.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: stale.yml  (+3 more)
data/: calibration_image_sample_data_20x128x128x3.npy
docs/: fb_refactor6_pull_request_description.md  fb_refactor7_improvements.md  fb_refactor7_pull_request_description.md  fb_refactor8_improvements.md  fb_refactor8_pull_request_description.md  flatbuffer_direct_architecture.md  flatbuffer_direct_handoff_2026-07-12.md  flatbuffer_direct_handoff_2026-07-13.md  flatbuffer_direct_handoff_2026-07-14.md  flatbuffer_direct_handoff_fb_refactor7.md  flatbuffer_direct_handoff_fb_refactor8.md  flatbuffer_direct_pytorch_regression_2026-07-14.md  flatbuffer_direct_quick_regression_2026-07-14.md  flatbuffer_direct_quick_regression_2026-07-16.md  flatbuffer_direct_tier0_4_full_regression_2026-07-16.md  flatbuffer_direct_tier0_4_full_regression_2026-07-17.md  flatbuffer_direct_tier0_4_full_regression_2026-07-18.md  flatbuffer_direct_tier0_4_full_regression_2026-07-20.md
json_samples/: replace_GRU.json  replace_InSPyReNet.json  replace_MobileBERT.json  replace_MobileFormer-e9.json  replace_alike.json  replace_animeganv2.json  replace_bread.json  replace_bread_nonfm.json  replace_cgi_stereo.json  replace_ddnm.json  replace_dn_dab_detr_480x480.json  replace_face_blendshapes.json  replace_face_paint_512_v2_0.json  replace_gru.json  replace_iat_llie.json  replace_japan_PP-OCRv3_rec_infer.json  replace_lstm.json  replace_lstm_undefined_dim.json  replace_maxim_dehaze.json  replace_mobilenetmss.json  replace_monodepth_op15.json  replace_obb.json  replace_parseq.json  replace_parseq_tiny.json  replace_pstmos_in_the_wild.json  replace_raft_stereo.json  replace_rec.json  replace_recognizer_japanese_g2.json  replace_retinaface_dynamic_shape.json  replace_rtmdet_ins.json  replace_rtmdet_tiny.json  replace_shadowformer.json  replace_titanet_small.json  replace_um.json  replace_vttrack.json  replace_yolov9t_dynamic.json
make_test_op/: make_Abs.py  make_Add.py  make_ArgMax.py  make_Atan.py  make_Attention.py  make_AvgPool.py  make_BatchNormalization.py  make_Cast.py  make_Clip.py  make_Col2Im.py  make_Concat.py  make_DFT.py  make_DeformConv2d.py  make_GridSample.py  make_GroupNormalization.py  make_GroupNormalization_opset18_21.py  make_HardSwish.py  make_If.py  make_LayerNormalization.py  make_Loop.py  make_LpPool.py  make_STFT.py  make_Squeeze.py  make_StringNormalizer.py  make_Unsqueeze.py  make_faster_rcnn.py  test_grid_sample_convert.py  test_softmax_convert.py
native_dbg_k0gcvjzs/: __init__.py  runtime.py
onnx2tf/: __init__.py  gs.py  onnx2tf.py
test/: input.pkl  model.py
test_cind/: model.py
tests/: flatbuffer_direct_fingerprint.py  test_accuracy_evaluator_input_layout.py  test_accuracy_evaluator_name_map.py  test_accuracy_evaluator_onnx_worker_path.py  test_accuracy_evaluator_seeded_input.py  test_accuracy_evaluator_subprocess.py  test_concat_shape_dtype_lowering.py  test_flatbuffer_direct_3d_gate_layout.py  test_flatbuffer_direct_absolute_final_affine_instancenorm_orchestration.py  test_flatbuffer_direct_absolute_final_cleanup_orchestration.py  test_flatbuffer_direct_absolute_final_normalization_attention_orchestration.py  test_flatbuffer_direct_absolute_final_normalization_attention_rank1_orchestration.py  test_flatbuffer_direct_activation_fusion_pass.py  test_flatbuffer_direct_add_concat_suffix_layout.py  test_flatbuffer_direct_affine_chain_fold_results.py  test_flatbuffer_direct_affine_prepost_results.py  test_flatbuffer_direct_architecture.py  test_flatbuffer_direct_artifact_metadata.py  test_flatbuffer_direct_artifact_preparation.py  test_flatbuffer_direct_attention_gather_cleanup_layout.py  test_flatbuffer_direct_attention_preproj_ranklift_layout.py  test_flatbuffer_direct_attention_recovery_orchestration.py  test_flatbuffer_direct_axis3_const_concat_layout.py  test_flatbuffer_direct_batchmatmul_adjoint_layout.py  test_flatbuffer_direct_batchmatmul_affine_input_layout.py  test_flatbuffer_direct_batchmatmul_se_layout.py  test_flatbuffer_direct_binary_bridge_result.py  test_flatbuffer_direct_binary_layout.py  test_flatbuffer_direct_binary_layout_adapter.py  test_flatbuffer_direct_binary_layout_convergence_owner.py  test_flatbuffer_direct_boundary_batchmatmul_unary_orchestration.py  test_flatbuffer_direct_boundary_input_chains.py  test_flatbuffer_direct_boundary_input_layout.py  test_flatbuffer_direct_boundary_signature_cleanup_orchestration.py  test_flatbuffer_direct_bulk_runner.py  test_flatbuffer_direct_callback_context_composition.py  test_flatbuffer_direct_cast_cleanup.py  test_flatbuffer_direct_channel_shuffle_gather_orchestration.py  (+469 more)
(+742 files in other folders)
