[project]
name = "onnx2tf"
version = "1.29.4"
description = "Self-Created Tools to convert ONNX files (NCHW) to TensorFlow/TFLite/Keras format (NHWC)."
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "requests==2.32.5",
    "numpy==1.26.4",
    "onnx==1.19.0",
    "onnxruntime==1.23.0",
    "opencv-python==4.11.0.86",
    "onnxsim==0.4.30",
    "ai-edge-litert==2.1.0",
    "tensorflow==2.19.0",
    "tf-keras==2.19.0",
    "onnx-graphsurgeon==0.5.8",
    "simple-onnx-processing-tools==1.1.32",
    "psutil==5.9.5",
    "protobuf==4.25.5",
    "h5py==3.11.0",
    "ml_dtypes==0.5.1",
    "flatbuffers==25.12.19",
]
[tool.uv]
override-dependencies = [
    "onnx==1.19.0",
    "onnxsim==0.4.30",
]
