[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[project]
name = "onnx2tf"
version = "1.29.19"
description = "Self-Created Tools to convert ONNX files (NCHW) to TensorFlow/TFLite/Keras format (NHWC). The purpose of this tool is to solve the massive Transpose extrapolation problem in onnx-tensorflow (onnx-tf)."
readme = "README.md"
requires-python = ">=3.10.12"
license = "MIT"
authors = [
    { name = "Katsuya Hyodo", email = "rmsdh122@yahoo.co.jp" }
]
keywords = ["onnx", "tensorflow", "tflite", "keras", "deep-learning", "machine-learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests==2.32.5",
    "numpy==1.26.4",
    "onnx==1.19.0",
    "onnxruntime==1.23.0",
    "opencv-python==4.11.0.86",
    "onnxsim==0.4.36",
    "onnxoptimizer==0.4.2",
    "ai-edge-litert==2.1.0",
    "tensorflow==2.19.0",
    "tf-keras==2.19.0",
    "onnx-graphsurgeon==0.5.8",
    "simple-onnx-processing-tools==1.1.32",
    "psutil==5.9.5",
    "protobuf==4.25.5",
    "h5py==3.11.0",
    "ml_dtypes==0.5.1",
    "flatbuffers==25.12.19",
]

[project.scripts]
onnx2tf = "onnx2tf:main"

[project.urls]
Homepage = "https://github.com/PINTO0309/onnx2tf"
Repository = "https://github.com/PINTO0309/onnx2tf"
Documentation = "https://github.com/PINTO0309/onnx2tf#readme"
Issues = "https://github.com/PINTO0309/onnx2tf/issues"

[tool.uv]
override-dependencies = [
    "onnx==1.19.0",
    "onnxsim==0.4.36",
    "ml-dtypes==0.5.1",
    "numpy==1.26.4",
]

[tool.uv.build-backend]
module-root = ""
