[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[project]
name = "onnx2tf"
version = "2.5.0"
description = "A tool for converting ONNX files to LiteRT/TFLite/TensorFlow, PyTorch native code (nn.Module), TorchScript (.pt), state_dict (.pt), Exported Program (.pt2), and Dynamo ONNX. It also supports direct conversion from LiteRT to PyTorch."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Katsuya Hyodo", email = "rmsdh122@yahoo.co.jp" }
]
keywords = ["onnx", "tensorflow", "tflite", "litert", "keras", "pytorch", "deep-learning", "machine-learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy==2.2.6",
    "onnx==1.20.1",
    "onnxruntime==1.26.0",
    "opencv-python==4.13.0.92",
    "onnxsim==0.6.5",
    "onnxoptimizer==0.4.2",
    "onnxscript==0.6.2",
    "ai-edge-litert==2.1.2",
    "sne4onnx==2.0.1",
    "sng4onnx==2.0.1",
    "psutil==5.9.5",
    "protobuf==7.35.1",
    "h5py==3.14.0",
    "ml_dtypes==0.5.4",
    "setuptools==81.0.0",
    "flatbuffers==25.12.19",
    "tqdm==4.67.1",
    "pytest==9.0.2",
]

[project.optional-dependencies]
tensorflow = [
    "tensorflow==2.21.0",
    "tf-keras==2.21.0",
    "keras==3.15.0",
]
torch = [
    "torch==2.11.0",
]

[project.scripts]
onnx2tf = "onnx2tf:main"
onnx2tf-tflite2sm-bulk = "onnx2tf.utils.tflite2sm_bulk_runner:main"
onnx2tf-pytorch-bulk = "onnx2tf.utils.pytorch_bulk_runner:main"

[project.urls]
Homepage = "https://github.com/PINTO0309/onnx2tf"
Repository = "https://github.com/PINTO0309/onnx2tf"
Documentation = "https://github.com/PINTO0309/onnx2tf#readme"
Issues = "https://github.com/PINTO0309/onnx2tf/issues"

[tool.uv]
override-dependencies = [
]

[tool.uv.build-backend]
module-root = ""

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    ".direnv/**",
    ".venv/**",
]
